[tool.poetry]
name = "retinaface"
version = "0.1.0"
description = ""
authors = ["reeve0930 <reeve0930@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
torchvision = "^0.7.0"
opencv-python = "^4.4.0"
Cython = "^0.29.21"
tqdm = "^4.50.2"
scipy = "^1.5.2"
ipython = "^7.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
